@@ -2,6 +2,9 @@
 1.新功能:初始化项目
 2.新功能:增加微信Provider
 
+[oauth2-client_1.0.0.1 2014-08-11 张春生]
+1.新功能:更改getAuthorizationUrl
+
 --备注分类
 1、新功能：
 2、Bug:
